--- a/jquery-wordsearch-game/jquery.wordsearchgame.css
+++ b/jquery-wordsearch-game/jquery.wordsearchgame.css
@@ -22,6 +22,13 @@
 #rf-searchgamecontainer {
     float: left;
     margin: .5em;
+
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
 }
 
 /* Style for the div containing the word list */
@@ -37,7 +44,14 @@
     -webkit-border-radius: 20px;
     -khtml-border-radius: 20px;
     border-radius: 20px;
-    cursor: pointer;	
+    cursor: pointer;
+
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
 }
 
 /* Style for the words that have been found */
